--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ idna==3.2; python_version >= '3'
 requests==2.26.0
 soupsieve==2.2.1; python_version >= '3.6'
 urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+python-dotenv==0.19.0
